feat: add db tables.
